arize phoenix notebook updates

--- a/notebooks/phoenix_evaluate_quickstart.ipynb
+++ b/notebooks/phoenix_evaluate_quickstart.ipynb
@@ -19,14 +19,12 @@
     "\n",
     "Let's get started!\n",
     "\n",
-    "First, install Phoenix with `pip install arize-phoenix`.\n",
-    "\n",
-    "To get you up and running quickly, we'll download some pre-existing trace data collected from a LlamaIndex application (in practice, this data would be collected by instrumenting your LLM application with an OpenInference-compatible tracer).  # TODO: Add link"
+    "First, install Phoenix with `pip install arize-phoenix`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +44,7 @@
     "from phoenix.trace.trace_dataset import TraceDataset\n",
     "from phoenix.trace.utils import json_lines_to_df\n",
     "\n",
+    "# To get you up and running quickly, we'll download some pre-existing trace data collected from a LlamaIndex application (in practice, this data would be collected by instrumenting your LLM application with an OpenInference-compatible tracer)\n",
     "traces_url = \"https://storage.googleapis.com/arize-phoenix-assets/datasets/unstructured/llm/context-retrieval/trace.jsonl\"\n",
     "with urlopen(traces_url) as response:\n",
     "    lines = [line.decode(\"utf-8\") for line in response.readlines()]\n",
@@ -93,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1721593012.038844 8329519 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
+      "I0000 00:00:1722087673.990868  674680 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
      ]
     },
     {
@@ -111,7 +110,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8a18e94490>"
+       "<IPython.lib.display.IFrame at 0x7fd700a064c0>"
       ]
      },
      "execution_count": 4,
@@ -132,7 +131,7 @@
    "source": [
     "Export your retrieved documents and query data from your session into a pandas dataframe.\n",
     "\n",
-    "Note: If you are interested in a different subset of your data, you can export with a custom query.  # TODO: Add link"
+    "Note: If you are interested in a different subset of your data, you can export with a custom query."
    ]
   },
   {
@@ -160,57 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0000 00:00:1721593070.445699 8323927 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
-      "I0000 00:00:1721593070.445925 8323927 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install -q openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0000 00:00:1721593076.179422 8323927 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
-      "I0000 00:00:1721593076.179685 8323927 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "openai==1.36.1\n",
-      "openinference-instrumentation-openai==0.1.8\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip freeze | grep openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from phoenix.evals import OpenAIModel\n",
     "\n",
-    "# api key set in OPENAI_API_KEY environment variable\n",
     "eval_model = OpenAIModel(model = \"gpt-4-turbo-preview\")"
    ]
   },
@@ -225,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,21 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1721593099.081049 8323927 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
-      "I0000 00:00:1721593099.081252 8323927 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
+      "I0000 00:00:1722087742.331125  673357 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
+      "I0000 00:00:1722087742.331332  673357 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95d163d3af9d43059d3692922776c378",
+       "model_id": "bc250b88da484dbfb7a69559925665a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,14 +232,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1721593099.179661 8323927 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
-      "I0000 00:00:1721593099.179881 8323927 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
+      "I0000 00:00:1722087742.431732  673357 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
+      "I0000 00:00:1722087742.431907  673357 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf19cde86626487683db1a99fa6efa35",
+       "model_id": "36d25b1ae8df408bac326c66c2daf904",
        "version_major": 2,
        "version_minor": 0
       },
@@ -326,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
